2001-12-06 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter:
	  - moved code out of mission_script.cpp:
	    - added script_variables.cpp
	    - added script_util.cpp
	    - modified cmd/script/Makefile.am


2001-12-04 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter:
	  - import of multiple modules
	  - exec in another module
	  - saveVariables
	  - datatype object (not yet)
	* change of dir structure
	  - modified src/Makefile.am src/cmd/Makefile.am configure.in
	  - imported interpreter code at src/cmd/script
	  - imported missions to data/mission
	  - imported modules to data/modules
	* imported doc dir at vegastrike/doc
	  

2001-12-04 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - scripts can have return values
	  - global variables
	  - while works
	  - exec is checked for correct return type

	
2001-12-03 Alexander Rawass <alexannika@users.sourceforge.net>

	* added more script tests
	* improved interpreter
	  - multiple scripts in module
	  - exec to call scripts from scripts
	  - arguments to exec
	* added section "interpreter" to vegastrike.conf
	  added variable "debuglevel" to that section

	
2001-12-02 Alexander Rawass <alexannika@users.sourceforge.net>

	* mission script interpreter working
	* added more testd*.mission files


2001-12-01 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* same seed when in benchmark mode
	* worked on the script interpreter:
	  - added script_callbacks.cpp to Makefile.am
	* added test missions:
	  - ships_confed1,ships_ares1
	  - testd_random1

	
2001-11-27 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified main_loop/main to have benchmarking mode
	* mission variable: terrain
	

2001-11-27 Alexander Rawass <alexannika@users.sourceforge.net>

	* last fix to link for icc
	

2001-11-26 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* improved digital hatswitch code
	* fixes for compilation with intel c++
	
