@@ -1,6 +1,13 @@
 2001-12-06 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* interpreter:
+	  - datatype object
+	  - callback 'olist' implements list
+	
+
+2001-12-06 Alexander Rawass <alexannika@users.sourceforge.net>
+
+	* interpreter:
 	  - moved code out of mission_script.cpp:
 	    - added script_variables.cpp
 	    - added script_util.cpp
